# eth-faucet

./: .env.sample  .gitignore  Dockerfile  INSTALL.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: manage.py
src/apps/blockchain/application/: dto.py  exceptions.py
src/apps/blockchain/application/services/: blockchain_service.py  faucet_service.py  tx_status_checker_service.py
src/apps/blockchain/domain/: entities.py  repository.py  value_objects.py
src/apps/blockchain/tests/: domain_test.py
src/apps/shared/: unit_of_work.py
src/apps/shared/tests/: domain_datetime_vo_test.py
src/apps/shared/value_objects/: __init__.py  datetime.py  id.py
src/base/: dao.py  dto.py  entity.py  enum.py  exceptions.py  serializers.py
src/infrastructure/: __init__.py  config.py  container.py  django_unit_of_work.py
src/infrastructure/admin/: __init__.py  faucet.py
src/infrastructure/dao/: base_django.py
src/infrastructure/management/commands/: check_transactions_status.py
src/infrastructure/migrations/: 0001_initial.py
src/infrastructure/models/: __init__.py  faucet_transaction.py
src/infrastructure/project/: asgi.py  encoders.py  exception_handlers.py  renderers.py  settings.py  urls.py  wsgi.py
src/infrastructure/repositories/: django_faucet_repository.py
src/user_interface/: response.py  urls.py  utils.py
src/user_interface/views/: __init__.py  faucet.py
